--- a/le_coin_libre/store/static/styles.css
+++ b/le_coin_libre/store/static/styles.css
@@ -11,6 +11,7 @@ body {
     padding: 0;
     margin-top:10em;
     width:100%;
+    height:auto;
 
 }
 
@@ -27,6 +28,7 @@ header {
     position: fixed;
     top: 0;
     z-index: 1000;
+    width:100%;
 }
 .titre {
     font-size: 1.5em;
@@ -99,8 +101,6 @@ footer{
     font-family: 'Vina Sans', sans-serif;
     color : white;
     text-align: center;
-    bottom: 0;
-    flex: 1;
     padding: 5px;
     margin:0px;
 
@@ -174,6 +174,11 @@ footer{
     font-weight: bold;
 }
 
+.description_seul{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
 /* Page accueil : barre recherche */
 
@@ -304,6 +309,16 @@ footer{
     margin-top: auto;
 }
 
+.bloc_reservation_profil{
+    background-color: none;
+    display:flex;
+    flex-direction: row;
+    color:grey;
+    font-size:small;
+    justify-content: flex-end;
+    gap:3px;
+    margin-top: auto;
+}
 /*Page à propos*/
 
 
@@ -443,6 +458,7 @@ footer{
     padding: 5em;
     border-bottom: solid 0.2em rgb(141,22,22);
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+    margin-bottom:20em;
 }
 
 .Connexion{
