--- a/le_coin_libre/store/templates/store/a_propos.html
+++ b/le_coin_libre/store/templates/store/a_propos.html
@@ -23,28 +23,40 @@
             <h2>Notre Équipe</h2>
                 <div class="team-member">
                     <div class="Nom">
-                        <img src="../static/images2/PX.jpg">
-                        <p> Mathis Benyahia </p>
+                        <a href="https://www.linkedin.com/in/mathis-benyahia/">
+                            <img src="../static/images2/PX.jpg">
+                            <p> Mathis Benyahia </p>
+                        </a>
                     </div>
                     <div class="Nom">
-                        <img src="../static/images2/T.jpg">
-                        <p> Adrian Demarcy</p>
+                        <a href="https://www.linkedin.com/in/adrian-demarcy-3b5532286/">
+                            <img src="../static/images2/T.jpg">
+                            <p> Adrian Demarcy</p>
+                        </a>
                     </div>
                     <div class="Nom">
-                        <img src="../static/images2/BW.jpg">
-                        <p> Yoan Di Cosmo</p>
+                        <a href="https://fr.linkedin.com/in/yoan-di-cosmo">
+                            <img src="../static/images2/BW.jpg">
+                            <p> Yoan Di Cosmo</p>
+                        </a>
                     </div>
                     <div class="Nom">
-                        <img src="../static/images2/VV.jpeg">
-                        <p> Renaud Michelon</p>
+                        <a href="https://www.linkedin.com/in/renaud-michelon-070307297/">
+                            <img src="../static/images2/VV.jpeg">
+                            <p> Renaud Michelon</p>
+                        </a>
                     </div>
                     <div class="Nom">
-                        <img src="../static/images2/IM.jpg">
-                        <p>Titouan Morvan</p>
+                        <a href="https://www.linkedin.com/in/titouan-morvan-548937289/">
+                            <img src="../static/images2/IM.jpg">
+                            <p>Titouan Morvan</p>
+                        </a>
                     </div>
                     <div class="Nom">
-                        <img src="../static/images2/H.jpg">
-                        <p>Younes Saad</p>
+                        <a href="https://fr.linkedin.com/in/younes-saad02">
+                            <img src="../static/images2/H.jpg">
+                            <p>Younes Saad</p>
+                        </a>
                     </div>
                 </div>
         </div>
