--- a/le_coin_libre/store/templates/store/a_propos.html
+++ b/le_coin_libre/store/templates/store/a_propos.html
@@ -24,37 +24,37 @@
                 <div class="team-member">
                     <div class="Nom">
                         <a href="https://www.linkedin.com/in/mathis-benyahia/">
-                            <img src="../static/images2/PX.jpg">
+                            <img src="../static/images2/PX.jpg" class="linkedin-image">
                             <p> Mathis Benyahia </p>
                         </a>
                     </div>
                     <div class="Nom">
                         <a href="https://www.linkedin.com/in/adrian-demarcy-3b5532286/">
-                            <img src="../static/images2/T.jpg">
+                            <img src="../static/images2/T.jpg" class="linkedin-image">
                             <p> Adrian Demarcy</p>
                         </a>
                     </div>
                     <div class="Nom">
                         <a href="https://fr.linkedin.com/in/yoan-di-cosmo">
-                            <img src="../static/images2/BW.jpg">
+                            <img src="../static/images2/BW.jpg" class="linkedin-image">
                             <p> Yoan Di Cosmo</p>
                         </a>
                     </div>
                     <div class="Nom">
                         <a href="https://www.linkedin.com/in/renaud-michelon-070307297/">
-                            <img src="../static/images2/VV.jpeg">
+                            <img src="../static/images2/VV.jpeg" class="linkedin-image">
                             <p> Renaud Michelon</p>
                         </a>
                     </div>
                     <div class="Nom">
                         <a href="https://www.linkedin.com/in/titouan-morvan-548937289/">
-                            <img src="../static/images2/IM.jpg">
+                            <img src="../static/images2/IM.jpg" class="linkedin-image">
                             <p>Titouan Morvan</p>
                         </a>
                     </div>
                     <div class="Nom">
                         <a href="https://fr.linkedin.com/in/younes-saad02">
-                            <img src="../static/images2/H.jpg">
+                            <img src="../static/images2/H.jpg" class="linkedin-image">
                             <p>Younes Saad</p>
                         </a>
                     </div>
