--- a/le_coin_libre/store/templates/store/user_profile.html
+++ b/le_coin_libre/store/templates/store/user_profile.html
@@ -13,7 +13,7 @@
       <p>Prénom nom : {{username}}</p>
       <p>Email : {{email}}</p> 
     </div>
-    <a class="bouton_deconnexion"href='/disconnect'><button class="rechercher">Se déconnecter</button></a>
+    <a class="bouton_deconnexion"href="{% url 'disconnect' %}"><button class="rechercher">Se déconnecter</button></a>
   </div>
     <!-- Produits de l'utilisateur -->
     <div>
