--- a/le_coin_libre/store/templates/store/index.html
+++ b/le_coin_libre/store/templates/store/index.html
@@ -2,7 +2,7 @@
 {%include 'store/header.html' %}
 
 <div class="bouton_ajout_dynamique">
-    <a href = "../add_product">+</a>
+    <a href = "../add_product/">+</a>
 </div>
         <!-- construction d'une barre de recherche -->
 
