--- a/le_coin_libre/store/templates/store/home.html
+++ b/le_coin_libre/store/templates/store/home.html
@@ -7,8 +7,8 @@
         {%for rooms in liste_room%}
         <form method="post" action="checkview">
             {% csrf_token %}
-            <input type="hidden" name="room_name" value="{{rooms.username}}">
-            <button type='submit' method='post' class="rechercher_message" action="checkview"> {{rooms.username}} </button>
+            <input type="hidden" name="room_name" value="{{rooms}}">
+            <button type='submit' method='post' class="rechercher_message" action="checkview"> {{rooms}} </button>
             <br>
         </form>
         {%endfor%}
