--- a/le_coin_libre/store/templates/store/login.html
+++ b/le_coin_libre/store/templates/store/login.html
@@ -15,7 +15,7 @@
       <label class="titre_cellule" for="{{ form.password.id_for_label }}">Mot de passe:</label>
       {{ form.password }}
     </div>
-    <button class="Connexion" type="submit">Login</button>
+    <button class="Connexion" type="submit">Se connecter</button>
     <a class="Connexion" href="{% url 'auth' %}"><CENTER>Register</CENTER></a>
   </form>
 {% endblock %}
