--- a/le_coin_libre/store/templates/store/user_profile.html
+++ b/le_coin_libre/store/templates/store/user_profile.html
@@ -16,39 +16,39 @@
     <a class="bouton_deconnexion"href="{% url 'disconnect' %}"><button class="rechercher">Se déconnecter</button></a>
   </div>
     <!-- Produits de l'utilisateur -->
-    <div>
-      <CENTER><h2>Vos produits en vente </h2></CENTER>
-      {% if unreserved_products %}
-        {% for produit in unreserved_products %}
-          <div class="bloc_produit">
-            <div class="photo_produit">
-                <img src='../static/images/{{produit.id}}/image1.jpg'>
-            </div>
-            <div class="description_produit">
-                <a href='/produit/{{produit.id}}'>
-                    <h1>{{produit.title}}</h1>
-                </a>
-                <h2 class="prix">{{ produit.price }} €</h2>
-                <div class="bloc_bas_produit_profil">
-                  <div class="bloc_date_profil">
-                    <p>Annonce publiée par</p>
-                    <a href= '/user_profile/?query={{produit.user_mail}}'><p class="user"> {{produit.user}} </p></a>
-                    <p class="date">le {{produit.date}}</p>
-                  </div>
-                  <a class="supprimer" href="{% url 'delete_product' produit.id %}" onclick="return ConfirmDelete()">Supprimer</a>         
-                    </a>
+  <div>
+    <center><h2>Vos produits en vente </h2></center>
+    {% if unreserved_products %}
+      {% for produit in unreserved_products %}
+        <div class="bloc_produit">
+          <div class="photo_produit">
+              <img src='../static/images/{{produit.id}}/image1.jpg'>
+          </div>
+          <div class="description_produit">
+              <a href='/produit/{{produit.id}}'>
+                  <h1>{{produit.title}}</h1>
+              </a>
+              <h2 class="prix">{{ produit.price }} €</h2>
+              <div class="bloc_bas_produit_profil">
+                <div class="bloc_date_profil">
+                  <p>Annonce publiée par</p>
+                  <a href= '/user_profile/?query={{produit.user_mail}}'><p class="user"> {{produit.user}} </p></a>
+                  <p class="date">le {{produit.date}}</p>
                 </div>
-                
-                
-            </div>
-        </div>
-        {% endfor %}
-      {% else %}
-        <p>Vous n'avez actuellement aucun produit en vente.</p>
-      {% endif %}
+                <a class="supprimer" href="{% url 'delete_product' produit.id %}" onclick="return ConfirmDelete()">Supprimer</a>         
+                  </a>
+              </div>
+          </div>
+      </div>
+      {% endfor %}
+    {% else %}
+    <div class="bloc_profil">
+      <center><p>Vous n'avez actuellement aucun produit en vente.</p></center>
+    </div>
+    {% endif %}
   </div>
   <div>
-    <CENTER><h2>Vos produits réservés</h2></CENTER>
+    <center><h2>Vos produits réservés</h2></center>
     {% if reserved_products %}
         {% for product in reserved_products %}
           <div class="bloc_produit">
@@ -68,20 +68,53 @@
                   <div class="bloc_date_profil">
                     <p>Annonce publiée le </p>
                     <p class="date"> {{product.date}}</p>
-                  </div>
-
-            
+                  </div>            
                   <a class="supprimer" href="{% url 'delete_product' product.id %}" onclick="return ConfirmDelete()">Supprimer</a>         
                     </a>
                 </div>
-                
-                
             </div>
-        </div>
+          </div>
         {% endfor %}
     {% else %}
-      <p>Vous n'avez actuellement aucun produit réservé.</p> 
+    <div class="bloc_profil">
+      <center><p>Vous n'avez actuellement aucun produit réservé.</p></center>
+    </div>
     {% endif %}
+  <div>
+    <center><h2>Vos réservations</h2></center>
+    {% if reservations %}
+      {% for produit in reservations %}
+        <div class="bloc_produit">
+          <div class="photo_produit">
+              <img src='../static/images/{{produit.id}}/image1.jpg'>
+          </div>
+          <div class="description_produit">
+              <a href='/produit/{{produit.id}}'>
+                  <h1>{{produit.title}}</h1>
+              </a>
+              <h2 class="prix">{{ produit.price }} €</h2>
+              <div class="bloc_bas_produit_profil">
+                <div class="bloc_date_profil">
+                  <p>Annonce publiée par</p>
+                  <a href= '/user_profile/?query={{produit.user_mail}}'><p class="user"> {{produit.user}} </p></a>
+                  <p class="date">le {{produit.date}}</p>
+                </div>
+              </div>
+          </div>
+      </div>
+      {% endfor %}
+    {% else %}
+    <div class="bloc_profil">
+      <center><p>Vous n'avez réservé aucun produit.</p></center>
+    </div>
+    {% endif %}
+  </div>
+
+
+
+
+
+  </div>
   </div>      
   
 <script>
